# jacaranda-maxwells-wallet

./: .envrc  .envrc.secrets.example  .gitignore  CLAUDE.md  Makefile  README.md  justfile  prod.just  pyproject.toml
ansible/: Makefile  ansible.cfg
ansible/host_vars/: maxwells-wallet-beta.yml  maxwells-wallet-demo.yml
ansible/playbooks/: deploy.yaml
ansible/roles/maxwells-wallet/defaults/: main.yml
ansible/roles/maxwells-wallet/handlers/: main.yml
ansible/roles/maxwells-wallet/tasks/: main.yml
ansible/roles/maxwells-wallet/templates/: docker-compose.yml.j2  nginx.conf.j2
terraform/: main.tf  outputs.tf  user-data-cloud-init.yaml.tpl  variables.tf
terraform/envs/prod/: Makefile  main.tf
