[project]
name = "jacaranda-maxwells-wallet"
version = "1.0.0"
description = "Maxwell's Wallet demo and beta hosting infrastructure"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ansible-core>=2.17,<2.18",
    "ansible>=10.0.0",
    "jmespath>=1.0.1",
    "netaddr>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
